# gezag

./: .gitignore  Cargo.toml  use_cases.txt
crates/base/: Cargo.toml
crates/base/src/domain/: mod.rs  repository.rs  resource.rs  shelf.rs
crates/base/src/infrastructure/: mod.rs
crates/base/src/infrastructure/shelf/: local.rs
crates/cli/: Cargo.toml  config.json
crates/cli/src/: cli.rs  entities.rs  index.rs  indexer.rs  main.rs  repositories.rs
crates/cli/src/cli/: config.rs
crates/cli/src/data/repositories/local/: local.rs  mod.rs  resources.rs
crates/cli/src/domain/entities/: mod.rs  resource.rs  topic.rs
crates/cli/src/domain/repositories/: librarian.rs  mod.rs  resources.rs  topics.rs
crates/cli/src/entities/: resources.rs  topics.rs
crates/cli/src/index/: local.rs
crates/cli/src/indexer/: local.rs
crates/cli/src/presentation/cli/: cli.rs  cli_args.rs  config.rs  mod.rs
crates/cli/src/presentation/cli/prompts/: resources.rs
crates/cli/src/repositories/: repository.rs
src/: lib.rs  sch.rs  time_poc.rs
src/cli/: cli.rs  cli_args.rs  mod.rs
src/cli/prompts/: configure.rs  mod.rs  resources.rs
src/domain/: error.rs  librarian.rs  mod.rs  repository.rs  resource.rs  shelf.rs
src/domain/contexful/: check_item.rs  mod.rs
src/entities/: indexable.rs  keyable.rs  mod.rs  resource.rs  topic.rs
src/repositories/: librarian.rs  mod.rs  resources.rs  topics.rs
src/repositories/local/: local.rs  mod.rs  resources.rs  topics.rs
