[package]
name = "gezag-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
delegate = "0.10"
derive_builder = "0.12"
directories = "5.0"
itertools = "0.11"
log = "0.4"
serde_json = "1.0"
serde_yaml = "0.9"
tailcall = "0.1"
text_io = "0.1"
thiserror = "1.0"
url = "2.3"

[dependencies.inquire]
version = "0.6.2"
features = ["date", "editor"]

[dependencies.clap]
version = "4.0"
features = ["cargo", "derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "1.2"
features = ["v4", "serde"]
