[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

anyhow = "1.0"
directories = "4.0"
log = "0.4"
serde_json = "1.0"
text_io = "0.1"
thiserror = "1.0"
toml = "0.5"
url = "2.3"

[dependencies.inquire]
version = "0.5"
features = ["date", "editor"]

[dependencies.clap]
version = "4.0"
features = ["cargo", "derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "1.2"
features = ["v4", "serde"]
